# rocket-blog

./: Cargo.toml
db/: db.sql  seed.sql
migrations/2017-10-15-044458_create_posts/: up.sql
src/: db.rs  main.rs  post.rs
templates/: index.html.hbs
templates/error/: 404.html.hbs
